RFC: Encrypted Mmap directory